--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,19 @@
 <footer class="site-footer">
 
-
+    <hr>
     <div class="wrapper">
-<!--         <p>
+    <!--<p>
             本站总访问量<span id="busuanzi_value_site_pv"></span>次，本站访客数<span id="busuanzi_value_site_uv"></span>人次，本文总阅读量<span id="busuanzi_value_page_pv"></span>次
         </p> -->
+
         <p class="power">
             <span>
-                Site powered by <a href="https://jekyllrb.com/">Jekyll</a>
+                Powered by <a href="https://jekyllrb.com/">Jekyll</a>.
+            </span>
+            <span>
+                {% if site.github_username %}
+                    <a href="https://github.com/{{site.github_username}}" title="GitHub"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a> 
+                {% endif %} 
             </span>
         </p>
     </div>
