--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,10 @@ layout: default
                 <i class="fa fa-calendar"></i>{{ page.date | date: "%F" }}
             </div>
 
-            <div class="label-card">
+            <!-- <div class="label-card">
                 {% if page.author %}<i class="fa fa-user"></i>{{ page.author }}
                 {% endif %}
-            </div>
+            </div> -->
 
             <div class="label-card">
                 {% if page.meta %}<i class="fa fa-key"></i>{{ page.meta }}  {% endif %}
