--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -6,13 +6,13 @@
 
     text-align: center;
     // margin-top: 50px;
-    background-color: #2b2b3c;
-    box-shadow: 0 -2px 4px 1px rgba(0,0,0,0.5);
-    color: #bbb;
+    // background-color: #2b2b3c;
+    // box-shadow: 0 -2px 4px 1px rgba(0,0,0,0.5);
+    //color: #bbb;
     .wrapper {
-        width: 1140px;
+        // width: 1140px;
         margin: 0 auto;
-        padding: 15px 0;
+        //padding: 15px 0;
         text-align: center;
         font-size: 14px;
         p {
@@ -41,7 +41,7 @@
                 color: #8F90C5;
                 transition: 0.3s ease;
                 &:hover {
-                    color: #fff;
+                    color: #0088cc;
                 }
             }
         }
