--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -18,6 +18,7 @@ header {
         line-height: 52px;
         .brand {
             font-size: 18px;
+            color: white;
         }
         small {
             margin-left: 26px;
@@ -52,7 +53,6 @@ header {
                     >.active {
                         color: #fff;
                         background-color: #000;
-                        box-shadow: 0 25px 25px -15px rgba(255,255,255,0.93);
                     }
                 }
             }
