--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,9 +1,9 @@
 .page[index] {
     a {
-        color: #4d6dad;
+        color: #333;
         transition: 0.5s ease;
         &:hover {
-            color: #223253;
+            color: #0aa284;
         }
     }
     .left {
@@ -47,7 +47,6 @@
                     }
                 }
                 .read-all {
-                    text-align: right;
                     font-size: 14px;
                     a {
                         color: #778ab0;
@@ -117,8 +116,8 @@
                                 margin-top: 3px;
                                 padding: 0 10px;
                                 font-size: 12px;
-                                color: #fff;
-                                background-color: #bbb;
+                                // color: #fff;
+                                // background-color: #bbb;
                                 border-radius: 50%;
                                 transition: 0.5s ease-in-out;
                             }
