--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -52,7 +52,7 @@
                         color: #778ab0;
                         transition: 0.2s ease;
                         &:hover {
-                            color: #5872a7;
+                            color: #0aa284;
                         }
                         i {
                             padding-right: 3px;
