--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -15,12 +15,13 @@
     .left {
         width: 75%;
         float: left;
-        padding: 20px 30px;
+        padding: 0px 30px;
         line-height: 1.6;
         font-size: 16px;
         background-color: #fff;
         box-shadow: 0 4px 10px rgba(0,0,0,.1);
         >h1 {
+            margin-top: 20px;
             margin-bottom: -10px;
         }
         a:not([title]){
@@ -37,6 +38,9 @@
                 time {
                     display: inline-block;
                     width: 135px;
+                }
+                h3 {
+                    margin: 0;
                 }
                 .title {
                     font-weight: bold;
