--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,9 @@ layout: default
             <div class="label-card">
             {% include tag.html %}
             </div>
-
+            <div class="label-card">
+                <i class="fa fa-eye"></i><span id="busuanzi_value_page_pv"></span>
+            </div>
         </div>
         <hr>
         <article itemscope itemtype="http://schema.org/BlogPosting">
