--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -32,7 +32,7 @@ body {
     background-color: #f4f6f8;
     position: relative;
     min-height: 100%;
-    padding-bottom: 190px;
+    padding-bottom: 100px;
 }
 a {
     text-decoration: none;
@@ -44,7 +44,7 @@ button {
 hr {
     border: 0;
     border-top: 1px solid #eee;
-    margin: 20px 0;
+    //margin: 20px 0;
 }
 
 ///////////
