--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -51,39 +51,23 @@
                     }
                 }
                 i {
-                    margin-right: 5px;
-                }
-                .categories {
-                    padding: 0 15px;
-                    i {
-                        color: #9e9d9d;
-                    }
-                    a {
-                        padding: 0 5px;
-                        background-color: #9e9d9d;
-                        color: #fff;
-                        font-size: 90%;
-                        transition: 0.3s ease;
-                        &:hover {
-                            background-color: #b6b6b9;
-                        }
-                    }
+                    margin-left: 5px;
                 }
                 .pageTag {
                     i {
-                        color: #c6cbe9;
+                        color: #b4b5b9;
                     }
                     a {
 
                         // border: 1px solid #aaa;
                         padding: 0 5px;
-                        background-color: #c6cbe9;
+                        background-color: #b4b5b9;
                         border-radius: 4px;
                         color: #fff;
                         font-size: 90%;
                         transition: 0.3s ease;
                         &:hover {
-                            background-color: #c0ddc7;
+                            background-color: #8a91ab;
                         }
                     }
                 }
