--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -24,6 +24,10 @@
             margin-top: 20px;
             margin-bottom: -10px;
         }
+        h2 {
+            border-bottom: 1px solid #eee;
+            margin: 50px 0 25px;
+        }
         a:not([title]){
             word-break: break-all;
         }
