--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -16,7 +16,7 @@
 
 <div class="theme-info">
   {{ __.footer.theme }} -
-  <a class="theme-link" href="https://github.com/ethendev/silo">
+  <a class="theme-link" href="https://github.com/ethendev/ethendev.github.io">
     NexT.{{ site.scheme }}
   </a>
 </div>
