--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -280,7 +280,7 @@
         {% if post.description and site.excerpt_description %}
           {{ post.description }}
           <!--noindex-->
-          <div class="post-button text-center">
+          <div class="post-button">
             <a class="btn" href="{{ post.url | relative_url }}">
               {{ __.post.read_more }} &raquo;
             </a>
@@ -289,7 +289,7 @@
         {% elsif post.excerpt  %}
           {% include _macro/post-excerpt.html %}
           <!--noindex-->
-          <div class="post-button text-center">
+          <div class="post-button">
             <a class="btn" href="{{ post.url | relative_url }}{% if site.scroll_to_more %}#{{ __.post.more }}{% endif %}" rel="contents">
               {{ __.post.read_more }} &raquo;
             </a>
@@ -300,7 +300,7 @@
           {{ content | slice: 0, site.auto_excerpt.length }}
           {% if content.size > site.auto_excerpt.length %}...{% endif %}
           <!--noindex-->
-          <div class="post-button text-center">
+          <div class="post-button">
             <a class="btn" href="{{ post.url | relative_url }}{% if site.scroll_to_more %}#{{ __.post.more }}{% endif %}" rel="contents">
               {{ __.post.read_more }} &raquo;
             </a>
