--- a/_sass/_schemes/Mist/_posts-expanded.scss
+++ b/_sass/_schemes/Mist/_posts-expanded.scss
@@ -8,9 +8,9 @@
     text-align: $site-meta-text-align;
     @include mobile() { text-align: center; }
   }
-  .post-eof { display: none; }
+  // .post-eof { display: none; }
 
-  .post { margin-top: 120px; }
+  // .post { margin-top: 120px; }
   .post:first-child { margin-top: 0; }
 
   .post-meta {
